# metnum-tp01

./: .gitignore  README.md  README.txt  TODO.txt  demo.slspec  requierments.txt  tests_a_realizar.txt
catedra/: test_30_segundos.txt  test_aleatorio.txt  test_aleatorio_desordenado.txt  test_aleatorio_desordenado.txt.out
experimentos/: README.txt  aislado.py  arbol_binario.py  base.py  circular.py  ejemplo.py  error_relativo.py  error_tests.py  importante_referenciador.py  referencias_valiosas.py  sin_links.py  tiempo_ejecucion.py  todos_a_uno.py  todos_con_todos.py  transitividad_en_cadena.py  transitividad_en_paralelo.py  uno_a_todos.py
experimentos/base/: IO.py  utils.py
experimentos/nb/: README.txt
experimentos/pagerank_scripts/: IO.py  utils.py
experimentos/resultados/aislado/: res.txt
experimentos/resultados/arbol_binario/: res.txt
experimentos/resultados/arbol_binario/in/: nodos.txt  nodos_5.txt  t.txt
experimentos/resultados/circular/: circular.csv  circular_summary.csv  res.txt
experimentos/resultados/circular/in/: t_10.txt  t_100.txt  t_11.txt  t_12.txt  t_13.txt  t_14.txt  t_15.txt  t_16.txt  t_17.txt  t_18.txt  t_19.txt  t_20.txt  t_21.txt  t_22.txt  t_23.txt  t_24.txt  t_25.txt  t_26.txt  t_27.txt  t_28.txt  t_29.txt  t_3.txt  t_30.txt  t_31.txt  t_32.txt  t_33.txt  t_34.txt  t_35.txt  t_36.txt  t_37.txt  t_38.txt  t_39.txt  t_4.txt  t_40.txt  t_41.txt  t_42.txt  t_43.txt  t_44.txt  t_45.txt  t_46.txt  (+58 more)
experimentos/resultados/error_relativo/: error_relativo_picos.csv
experimentos/resultados/error_relativo_x_p_val/: error_relativo_x_p_val.csv  error_relativo_x_p_val_summary.csv
experimentos/resultados/error_tests/: error_tests.csv  test_15_segundos_error_por_coordenada.txt  test_30_segundos_error_por_coordenada.txt  test_aleatorio_desordenado_error_absoluto,txt
experimentos/resultados/importante_referenciador/: importante_referenciador.csv  importante_referenciador_summary.csv  res.txt
experimentos/resultados/referencias_valiosas/: referencias_valiosas.csv  referencias_valiosas_summary_referenciado.csv  referencias_valiosas_summary_referenciador.csv  res.txt
experimentos/resultados/sin_links/: sin_links.csv  sin_links_summary.csv
experimentos/resultados/sin_links/in/: nodos_10.txt  nodos_11.txt  nodos_12.txt  nodos_13.txt  nodos_14.txt  nodos_15.txt  nodos_16.txt  nodos_17.txt  nodos_18.txt  nodos_19.txt  nodos_2.txt  nodos_20.txt  nodos_21.txt  nodos_22.txt  nodos_23.txt  nodos_24.txt  nodos_25.txt  nodos_26.txt  nodos_27.txt  nodos_28.txt  nodos_29.txt  nodos_3.txt  nodos_30.txt  nodos_31.txt  nodos_32.txt  nodos_33.txt  nodos_34.txt  nodos_35.txt  nodos_36.txt  nodos_37.txt  nodos_38.txt  nodos_39.txt  nodos_4.txt  nodos_40.txt  nodos_41.txt  nodos_42.txt  (+62 more)
experimentos/resultados/tiempo_ejecucion/: tiempo_ejecucion.csv  tiempo_ejecucion_summary.csv
experimentos/resultados/todos_a_uno/: res.txt  todos_a_uno.csv  todos_a_uno_summary_testigo.csv  todos_a_uno_summary_uno.csv
experimentos/resultados/todos_con_todos/: res.txt  todos_con_todos.csv  todos_con_todos_summary.csv
experimentos/resultados/transitividad_en_cadena/: res.txt  transitividad_en_cadena.csv  transitividad_en_cadena_summary.csv
experimentos/resultados/transitividad_en_paralelo/: res.txt
experimentos/resultados/uno_a_todos/: res.txt  uno_a_todos.csv  uno_a_todos_summary_testigo1.csv  uno_a_todos_summary_testigoN.csv  uno_a_todos_summary_uno.csv
experimentos/scripts/: IO.py  randomTest.py
experimentos/scripts/data/: input1.txt
experimentos/scripts/output/: hola1.txt
implementacion/: CMakeLists.txt  main.cpp
implementacion/src/: EG.h  IO.h  Matriz.h  MatrizALT.h  MatrizCSR.h  PageRank.h  matriz-repr.h  matriz.h  matriz_alt.h  matriz_base.h  matriz_llist.h  matriz_vlist.h  pagerank.h
implementacion/src/impl/: IO.cpp  IO.hpp  Matriz-gauss.hpp  Matriz-iteradores.hpp  Matriz.hpp  MatrizALT.hpp  MatrizCSR.hpp  PageRank.cpp  matriz.hpp  pagerank.cpp  pagerank.hpp
implementacion/src/impl/matriz/: matriz-gauss.hpp  matriz-interfaz.hpp  matriz-iteradores.hpp  matriz-operadores.hpp  matriz-repr-alt.hpp  matriz-repr-base.hpp  matriz-repr-list.hpp  matriz-repr-vlist.hpp  matriz.hpp  matriz_alt.cpp  matriz_base.cpp  matriz_llist.cpp  matriz_vlist.cpp
implementacion/src/matriz/: matriz_alt.h  matriz_base.h  matriz_llist.h  matriz_vlist.h
implementacion/tests/: Matriz-test.cpp  Matriz-tests.cpp  MatrizAlt-tests.cpp  Pagerank-tests.cpp  matriz-tests.cpp  pagerank-tests.cpp  tests.cpp
implementacion/tests/files/: README.txt  test_15_segundos.txt  test_15_segundos.txt.out  test_30_segundos.txt.out  test_completo.txt  test_completo.txt.out  test_sin_links.txt.out  test_trivial.txt.out
implementacion/tests/gtest-1.8.1/: gtest-all.cc  gtest.h
informe/: experimentacion.txt  main.bbl  main.blg  main.tex
informe/files/: citations.bib
informe/files/src/: apendice.tex  caratula.tex  conclusiones.tex  desarrollo.tex  header.tex  introduccion.tex  resultados.tex  resumen.tex
latex/: main.tex
latex/files/: citations.bib  usos_ej.txt
latex/files/src/: caratula.tex  header.tex
resultados/todos_a_uno/in/: .txt
(+608 files in other folders)
